--- a/package.json
+++ b/package.json
@@ -43,20 +43,20 @@
     "three": "^0.140.0"
   },
   "devDependencies": {
-    "@types/webgl2": "0.0.4",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.0",
-    "lint-staged": "^9.1.0",
+    "@types/webgl2": "0.0.6",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.2",
-    "three": "github:mozillareality/three.js#developers/lonycell/hubs-patches-133-fake-140",
-    "ts-loader": "^6.0.4",
-    "tslint": "^5.18.0",
+    "prettier": "^2.6.2",
+    "three": "github:metabooth/three.js#developers/lonycell/hub-patches-133-to-fake-140",
+    "ts-loader": "^9.3.0",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.5.2",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1"
+    "tslint-plugin-prettier": "^2.3.0",
+    "typescript": "^4.7.2",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   }
 }
